<resources>
    <string name="action_settings">Settings</string>
    <string name="addProject">Add Project</string>
    <string name="Project">Project Id</string>
    <string name="projectName">Project Name</string>
    <string name="projectDesc">Project Description</string>
    <string name="investor">Create Investor Dummy Data</string>
    <string name="investorid">Investor ID</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Investor Email</string>
    <string name="needFundLabel">Needed Fund:</string>
    <string name="received">Received Fund:</string>
    <string name="app_name">Jumpstart</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="action_listview">ListView</string>
    <string name="action_gridview">GridView</string>
    <string name="listview_empty">There\'s no item in the listview.</string>
    <string name="gridview_empty">There\'s no item in the gridview.</string>
    <string name="action_recyclerview_list">RecyclerView - List</string>
    <string name="action_recyclerview_grid">RecyclerView - Grid</string>
    <string name="NeededFund">Needed Fund:</string>
    <string name="ReceivedFund">Received Fund:</string>
</resources>
